// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render based on current route 1`] = `
Array [
  <div
    class="root visible"
  >
    <nav
      class="navigation"
    >
      <div
        class="navigation"
      >
        <div
          class="header"
        >
          <span
            class="logo"
            title="2.0.0-RC1"
          >
            <span
              aria-label="su-sulu-logo"
              class="su-sulu-logo"
            />
          </span>
          <div
            class="pin"
            role="button"
          >
            <span
              aria-label="su-stick-right"
              class="su-stick-right pinIcon"
            />
          </div>
        </div>
        <div
          class="items"
        />
        <div
          class="footer"
        >
          <div
            class="userSection"
          >
            <div
              class="button"
              role="button"
            >
              <div
                class="userImage"
              >
                <span
                  aria-label="su-user"
                  class="su-user placeholder"
                />
              </div>
              <span
                class="username"
              >
                Hikaru Sulu
              </span>
              <span
                aria-label="su-angle-up"
                class="su-angle-up"
              />
            </div>
            <div
              class="menu"
            >
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-user"
                  class="su-user buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.edit_profile
                </span>
              </button>
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-sign-out-alt"
                  class="su-sign-out-alt buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.logout
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        >
          <div>
            <h1>
              Test
            </h1>
            <h2>
              test
            </h2>
          </div>
        </div>
        <header>
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.error
              </strong>
               - 
            </div>
            <span
              aria-label="su-times"
              class="su-times clickable closeIcon"
              role="button"
              tabindex="0"
            />
          </div>
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.error
              </strong>
               - 
            </div>
          </div>
          <nav
            class="toolbar light"
          >
            <div
              class="controls light grow"
            >
              <button
                class="button light primary"
              >
                <span
                  aria-label="su-bars"
                  class="su-bars icon"
                />
              </button>
            </div>
            <div
              class="controls light"
            />
          </nav>
        </header>
      </main>
    </div>
  </div>,
  <div>
    ProfileFormOverlay Mock
  </div>,
]
`;

exports[`Render based on current route with app version 1`] = `
Array [
  <div
    class="root visible"
  >
    <nav
      class="navigation"
    >
      <div
        class="navigation"
      >
        <div
          class="header"
        >
          <span
            class="logo"
            title="2.0.0-RC1"
          >
            <span
              aria-label="su-sulu-logo"
              class="su-sulu-logo"
            />
          </span>
          <div
            class="pin"
            role="button"
          >
            <span
              aria-label="su-stick-right"
              class="su-stick-right pinIcon"
            />
          </div>
        </div>
        <div
          class="items"
        />
        <div
          class="footer"
        >
          <div
            class="userSection"
          >
            <div
              class="button"
              role="button"
            >
              <div
                class="userImage"
              >
                <span
                  aria-label="su-user"
                  class="su-user placeholder"
                />
              </div>
              <span
                class="username"
              >
                Hikaru Sulu
              </span>
              <span
                aria-label="su-angle-up"
                class="su-angle-up"
              />
            </div>
            <div
              class="menu"
            >
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-user"
                  class="su-user buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.edit_profile
                </span>
              </button>
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-sign-out-alt"
                  class="su-sign-out-alt buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.logout
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        >
          <div>
            <h1>
              Test
            </h1>
            <h2>
              test
            </h2>
          </div>
        </div>
        <header>
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.error
              </strong>
               - 
            </div>
            <span
              aria-label="su-times"
              class="su-times clickable closeIcon"
              role="button"
              tabindex="0"
            />
          </div>
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.error
              </strong>
               - 
            </div>
          </div>
          <nav
            class="toolbar light"
          >
            <div
              class="controls light grow"
            >
              <button
                class="button light primary"
              >
                <span
                  aria-label="su-bars"
                  class="su-bars icon"
                />
              </button>
            </div>
            <div
              class="controls light"
            />
          </nav>
        </header>
      </main>
    </div>
  </div>,
  <div>
    ProfileFormOverlay Mock
  </div>,
]
`;

exports[`Render login screen to reset password 1`] = `
Array [
  <div
    class="login"
  >
    <div
      class="loginContainer"
    >
      <div
        class="formContainer"
      >
        <div
          class="logoContainer"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu"
          />
        </div>
        <div
          class="header"
        >
          sulu_admin.reset_password
        </div>
        <form
          class="form"
        >
          <fieldset>
            <label
              class="inputField"
            >
              <div
                class="labelText"
              >
                sulu_admin.password
              </div>
              <label
                class="input default left"
              >
                <div
                  class="prependedContainer default"
                >
                  <span
                    aria-label="su-lock"
                    class="su-lock icon default"
                  />
                </div>
                <input
                  autocomplete="new-password"
                  type="password"
                  value=""
                />
              </label>
            </label>
            <label
              class="inputField"
            >
              <div
                class="labelText"
              >
                sulu_admin.repeat_password
              </div>
              <label
                class="input default left"
              >
                <div
                  class="prependedContainer default"
                >
                  <span
                    aria-label="su-lock"
                    class="su-lock icon default"
                  />
                </div>
                <input
                  autocomplete="new-password"
                  type="password"
                  value=""
                />
              </label>
            </label>
            <div
              class="buttons"
            >
              <button
                class="button link hasText"
                type="button"
              >
                <span
                  class="buttonText"
                >
                  sulu_admin.to_login
                </span>
              </button>
              <button
                class="button primary hasText"
                disabled=""
                type="submit"
              >
                <span
                  class="buttonText"
                >
                  sulu_admin.reset_password
                </span>
              </button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        class="backLinkContainer"
      >
        <a
          class="backLink"
          href="/"
        >
          <span
            aria-label="su-angle-left"
            class="su-angle-left backLinkIcon"
          />
          sulu_admin.back_to_website
        </a>
      </div>
    </div>
  </div>,
  <div
    class="loader"
  >
    <div
      class="spinner"
      style="width: 40px; height: 40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>,
]
`;

exports[`Render login when user is not logged in 1`] = `
Array [
  <div
    class="login"
  >
    <div
      class="loginContainer"
    >
      <div
        class="formContainer"
      >
        <div
          class="logoContainer"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu"
          />
        </div>
        <div
          class="header"
        >
          sulu_admin.welcome
        </div>
        <form
          class="form"
        >
          <fieldset>
            <label
              class="inputField"
            >
              <div
                class="labelText"
              >
                sulu_admin.username_or_email
              </div>
              <label
                class="input default left"
              >
                <div
                  class="prependedContainer default"
                >
                  <span
                    aria-label="su-user"
                    class="su-user icon default"
                  />
                </div>
                <input
                  autocomplete="username"
                  type="text"
                  value=""
                />
              </label>
            </label>
            <label
              class="inputField"
            >
              <div
                class="labelText"
              >
                sulu_admin.password
              </div>
              <label
                class="input default left"
              >
                <div
                  class="prependedContainer default"
                >
                  <span
                    aria-label="su-lock"
                    class="su-lock icon default"
                  />
                </div>
                <input
                  autocomplete="current-password"
                  type="password"
                  value=""
                />
              </label>
            </label>
            <div
              class="buttons"
            >
              <button
                class="button link hasText"
                type="button"
              >
                <span
                  class="buttonText"
                >
                  sulu_admin.forgot_password
                </span>
              </button>
              <button
                class="button primary hasText"
                disabled=""
                type="submit"
              >
                <span
                  class="buttonText"
                >
                  sulu_admin.login
                </span>
              </button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        class="backLinkContainer"
      >
        <a
          class="backLink"
          href="/"
        >
          <span
            aria-label="su-angle-left"
            class="su-angle-left backLinkIcon"
          />
          sulu_admin.back_to_website
        </a>
      </div>
    </div>
  </div>,
  <div
    class="loader"
  >
    <div
      class="spinner"
      style="width: 40px; height: 40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>,
]
`;

exports[`Render login with loader 1`] = `
Array [
  <div
    class="login"
  >
    <div
      class="loginContainer"
    >
      <div
        class="formContainer"
      >
        <div
          class="logoContainer"
        >
          <span
            aria-label="su-sulu"
            class="su-sulu"
          />
        </div>
        <div
          class="loaderContainer"
        >
          <div
            class="spinner"
            style="width: 20px; height: 20px;"
          >
            <div
              class="doubleBounce1"
            />
            <div
              class="doubleBounce2"
            />
          </div>
        </div>
      </div>
      <div
        class="backLinkContainer"
      />
    </div>
  </div>,
  <div
    class="loader"
  >
    <div
      class="spinner"
      style="width: 40px; height: 40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>,
]
`;

exports[`Render opened navigation 1`] = `
Array [
  <div
    class="root visible navigationVisible"
  >
    <nav
      class="navigation"
    >
      <div
        class="navigation"
      >
        <div
          class="header"
        >
          <span
            class="logo"
            title="2.0.0-RC1"
          >
            <span
              aria-label="su-sulu-logo"
              class="su-sulu-logo"
            />
          </span>
          <div
            class="pin"
            role="button"
          >
            <span
              aria-label="su-stick-right"
              class="su-stick-right pinIcon"
            />
          </div>
        </div>
        <div
          class="items"
        />
        <div
          class="footer"
        >
          <div
            class="userSection"
          >
            <div
              class="button"
              role="button"
            >
              <div
                class="userImage"
              >
                <span
                  aria-label="su-user"
                  class="su-user placeholder"
                />
              </div>
              <span
                class="username"
              >
                Hikaru Sulu
              </span>
              <span
                aria-label="su-angle-up"
                class="su-angle-up"
              />
            </div>
            <div
              class="menu"
            >
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-user"
                  class="su-user buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.edit_profile
                </span>
              </button>
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-sign-out-alt"
                  class="su-sign-out-alt buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.logout
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        >
          <div>
            <h1>
              Test
            </h1>
            <h2>
              test
            </h2>
          </div>
        </div>
        <header>
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.error
              </strong>
               - 
            </div>
            <span
              aria-label="su-times"
              class="su-times clickable closeIcon"
              role="button"
              tabindex="0"
            />
          </div>
          <div
            class="snackbar warning"
            role="button"
          >
            <span
              aria-label="su-bell"
              class="su-bell icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.warning
              </strong>
               - 
            </div>
          </div>
          <nav
            class="toolbar light"
          >
            <div
              class="controls light grow"
            >
              <button
                class="button light primary"
              >
                <span
                  aria-label="su-times"
                  class="su-times icon"
                />
              </button>
            </div>
            <div
              class="controls light"
            />
          </nav>
        </header>
      </main>
      <div
        class="backdrop"
        role="button"
      />
    </div>
  </div>,
  <div>
    ProfileFormOverlay Mock
  </div>,
]
`;

exports[`Should not fail if current route does not exist 1`] = `
Array [
  <div
    class="root visible"
  >
    <nav
      class="navigation"
    >
      <div
        class="navigation"
      >
        <div
          class="header"
        >
          <span
            class="logo"
            title="2.0.0-RC1"
          >
            <span
              aria-label="su-sulu-logo"
              class="su-sulu-logo"
            />
          </span>
          <div
            class="pin"
            role="button"
          >
            <span
              aria-label="su-stick-right"
              class="su-stick-right pinIcon"
            />
          </div>
        </div>
        <div
          class="items"
        />
        <div
          class="footer"
        >
          <div
            class="userSection"
          >
            <div
              class="button"
              role="button"
            >
              <div
                class="userImage"
              >
                <span
                  aria-label="su-user"
                  class="su-user placeholder"
                />
              </div>
              <span
                class="username"
              >
                Hikaru Sulu
              </span>
              <span
                aria-label="su-angle-up"
                class="su-angle-up"
              />
            </div>
            <div
              class="menu"
            >
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-user"
                  class="su-user buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.edit_profile
                </span>
              </button>
              <button
                class="button text hasText menuButton"
                type="button"
              >
                <span
                  aria-label="su-sign-out-alt"
                  class="su-sign-out-alt buttonIcon"
                />
                <span
                  class="buttonText"
                >
                  sulu_admin.logout
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="content"
    >
      <main
        class="main"
      >
        <div
          class="viewContainer"
        />
        <header>
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.error
              </strong>
               - 
            </div>
            <span
              aria-label="su-times"
              class="su-times clickable closeIcon"
              role="button"
              tabindex="0"
            />
          </div>
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong>
                sulu_admin.error
              </strong>
               - 
            </div>
          </div>
          <nav
            class="toolbar light"
          >
            <div
              class="controls light grow"
            >
              <button
                class="button light primary"
              >
                <span
                  aria-label="su-bars"
                  class="su-bars icon"
                />
              </button>
            </div>
            <div
              class="controls light"
            />
          </nav>
        </header>
      </main>
    </div>
  </div>,
  <div>
    ProfileFormOverlay Mock
  </div>,
]
`;
